<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity" >

    <Button
        android:id="@+id/login_button_signIn"
        android:layout_width="175dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:onClick="signIn"
        android:text="@string/login_button_signIn" />
 
    <Button
        android:id="@+id/login_button_anonymous"
        android:layout_width="175dip"
        android:layout_height="wrap_content"
        android:onClick="playAnonymously"
        android:text="@string/login_button_anonymous" />
    
	<TextView
        android:id="@+id/login_textview_noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:text="@string/login_string_noAccount" />

	<Button
	    android:id="@+id/login_button_register"
	    android:layout_width="175dip"
	    android:layout_height="wrap_content"
	    android:text="@string/login_button_register" />

</LinearLayout>