<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    android:background="#38a2fb" >
    
    <TextView
        android:id="@+id/question_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="5dip"
        android:text="@string/round_question_id_placeholder" />

    <TextView
        android:id="@+id/question_text"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="10dip"
        android:layout_weight="10"
        android:maxLines = "8"
        android:scrollbars = "vertical"
        android:background="@drawable/white_text_field"
        android:text="@string/round_question_text" />
    
    <Button
        android:id="@+id/answer_1"
        android:layout_width="175dip"
        android:layout_height="0dp"
        android:layout_marginBottom="2dip"
        android:text="@string/round_button_answer_1" 
        android:layout_gravity="center"
        android:textSize="14sp"
        android:layout_weight="4"
        android:background="@drawable/standard_orange_button" />
    <Button
        android:id="@+id/answer_2"
        android:layout_width="175dip"
        android:layout_height="0dp"
        android:layout_marginBottom="2dip"
        android:text="@string/round_button_answer_2" 
        android:layout_gravity="center"
        android:textSize="14sp"
        android:layout_weight="4"
        android:background="@drawable/standard_orange_button" />
    <Button
        android:id="@+id/answer_3"
        android:layout_width="175dip"
        android:layout_height="0dp"
        android:layout_marginBottom="2dip"
        android:text="@string/round_button_answer_3" 
        android:layout_gravity="center"
        android:textSize="14sp"
        android:layout_weight="4"
        android:background="@drawable/standard_orange_button" />
    <Button
        android:id="@+id/answer_4"
        android:layout_width="175dip"
        android:layout_height="0dp"
        android:layout_marginBottom="2dip"
        android:text="@string/round_button_answer_4" 
        android:layout_gravity="center"
        android:textSize="14sp"
        android:layout_weight="4"
        android:background="@drawable/standard_orange_button" />
    
    <Button
        android:id="@+id/hint_button"
        android:layout_width="80dip"
        android:layout_height="0dp"
        android:text="@string/round_button_hint" 
        android:layout_gravity="center"
        android:layout_weight="5"
        android:onClick="hintButtonPushed"
        android:background="@drawable/standard_orange_button" />
    

</LinearLayout>