<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="#38a2fb"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".HomeActivity" >

    <TextView
        android:id="@+id/signIn_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:text="@string/signIn_title"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/signIn_username"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:layout_marginTop="20dip"
        android:hint="@string/login_username"
        android:background="@drawable/white_text_field"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/signIn_password"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif"
        android:hint="@string/login_password"
        android:background="@drawable/white_text_field"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="240dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/signin_button_cancel"
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:layout_marginRight="20dip"
            android:onClick="cancelClick"
            android:background="@drawable/standard_orange_button"
            android:text="@string/signIn_button_cancel" />

        <Button
            android:id="@+id/signin_button_signin"
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:onClick="signInClick"
            android:background="@drawable/standard_orange_button"
            android:text="@string/signIn_button_signIn" />
    </LinearLayout>

</LinearLayout>